# plant-care-agent

./: .gitignore  FEATURES.md  README.md  pyproject.toml  项目报告书.md
data/garden/: GARDEN.md  projects.json
data/garden/栀子花/: journal.md
data/garden/玫瑰/: journal.md
docs/: image-transmission.md  merge.md
scripts/: assemble_config.py  claude_style_chat.py  plant_inspector_cron.py  proactive_digest.py  run_client.sh  start.sh  start_server.sh
src/plant_care_agent/: chat_round_log.py  conversation_store.py  farm_memory_wrapper.py  garden_paths.py  logging_setup.py  md_log_file.py  plant_memory_wrapper.py  register.py  weather_codes.py
src/plant_care_agent/configs/: config.yml  config_farm.yml
src/plant_care_agent/data/: plants_db.json
src/plant_care_agent/inspector/: __init__.py  inspector.py  project_manager.py  report.py
src/plant_care_agent/memory/: context_builder.py  farm_context_builder.py
src/plant_care_agent/proactive/: __init__.py  garden_io.py  monitor_yaml.py  push.py  snapshot.py  weather_sync.py
src/plant_care_agent/prompts/: __init__.py  core.md  core_farm.md  loader.py  style.md  tools_block.md  workflow.md  workflow_farm.md
src/plant_care_agent/sensors/: __init__.py  air_humidity.py  air_temperature.py  base.py  hub.py  light_intensity.py  rainfall.py  soil_moisture.py  soil_ph.py  state_store.py  wind_speed.py
src/plant_care_agent/skills/: __init__.py  registry.py
src/plant_care_agent/tools/: care_scheduler.py  farm_automation.py  farm_chart.py  farm_journal.py  farm_report.py  growth_journal.py  growth_slides.py  plant_chart.py  (+10 more)
(+8 files in other folders)
